[gd_scene load_steps=12 format=2]

[ext_resource path="res://mapod_assets/images_2d/portal.png" type="Texture" id=1]
[ext_resource path="res://mapod_assets/images_2d/wall2d.png" type="Texture" id=2]
[ext_resource path="res://mapod_assets/images/tex_swirl_0002_mk.jpg" type="Texture" id=3]
[ext_resource path="res://mapod_assets/shaders/mapod_portal_2d.gdshader" type="Shader" id=4]
[ext_resource path="res://mapod_core/mapod_analyzable/mapod_analyzable_2d_portal/mapod_analyzable_2d_portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://mapod_core/mapod_tiles_2d/mapod_tile_2d_portal/mapod_tile_2d_portal.gd" type="Script" id=6]
[ext_resource path="res://mapod_assets/fonts/cmu_concrete/cmunorm.ttf" type="DynamicFontData" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/baseColor = Color( 0.0352941, 0.0470588, 0.580392, 1 )
shader_param/speed = 0.1
shader_param/noiseMap = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0.815686, 1 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="MapodTile2DPortal" type="Node2D"]
script = ExtResource( 6 )

[node name="Wall" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="portal" type="Sprite" parent="Wall"]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="PathTypePanel" type="Panel" parent="."]
visible = false
margin_left = -126.0
margin_top = -211.0
margin_right = 126.0
margin_bottom = -175.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathType" type="Label" parent="PathTypePanel"]
margin_right = 250.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Percorso di STUDIO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelTitle" type="Panel" parent="."]
margin_left = -127.0
margin_top = -170.0
margin_right = 128.0
margin_bottom = -134.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelTitle"]
margin_left = 3.0
margin_top = 3.0
margin_right = 252.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Nessun titolo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body2DPortal" parent="." instance=ExtResource( 5 )]
